<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:background="@color/ColorBackgroundAppMain"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/etiquetaResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/gridLayout"
        android:layout_marginBottom="100dp"
        android:height="100dp"
        android:textAlignment="textEnd"
        android:textColor="#F5F5F5"
        android:textSize="35sp" />

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        app:columnCount="4"
        app:orientation="horizontal"
        app:rowCount="5">

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_numero"
            android:text="@string/clear"
            android:textColor="@color/colorButton" />

        <Button
            android:id="@+id/multiplicar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_numero"
            android:text="@string/multiplicar"
            android:textColor="@color/colorButton" />

        <Button
            android:id="@+id/dividir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_numero"
            android:text="@string/dividir"
            android:textColor="@color/colorButton" />

        <Button
            android:id="@+id/borrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_numero"
            android:text="@string/borrar"
            android:textColor="@color/colorButton"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/siete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_numero"
            android:text="@string/siete"
            android:textColor="@color/colorButtonNumber" />

        <Button
            android:id="@+id/ocho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_numero"
            android:text="@string/ocho"
            android:textColor="@color/colorButtonNumber" />

        <Button
            android:id="@+id/nueve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_numero"
            android:text="@string/nueve"
            android:textColor="@color/colorButtonNumber" />

        <Button
            android:id="@+id/sumar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_numero"
            android:text="@string/sumar"
            android:textColor="@color/colorButton"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/cuatro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_numero"
            android:text="@string/cuatro"
            android:textColor="@color/colorButtonNumber" />

        <Button
            android:id="@+id/cinco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_numero"
            android:text="@string/cinco"
            android:textColor="@color/colorButtonNumber" />

        <Button
            android:id="@+id/seis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_numero"
            android:text="@string/seis"
            android:textColor="@color/colorButtonNumber" />

        <Button
            android:id="@+id/restar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_numero"
            android:text="@string/restar"
            android:textColor="@color/colorButton"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/uno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_numero"
            android:text="@string/uno"
            android:textColor="@color/colorButtonNumber" />

        <Button
            android:id="@+id/dos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_numero"
            android:text="@string/dos"
            android:textColor="@color/colorButtonNumber" />

        <Button
            android:id="@+id/tres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_numero"
            android:text="@string/tres"
            android:textColor="@color/colorButtonNumber" />

        <Button
            android:id="@+id/resultado"
            android:background="@drawable/button_resultado"
            android:text="@string/resultado"
            android:textColor="@color/colorButtonNumber"
            app:layout_gravity="fill"
            app:layout_rowSpan="2" />

        <Button
            android:id="@+id/cero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_numero"
            android:text="@string/cero"
            android:textColor="@color/colorButtonNumber"
            app:layout_columnSpan="2"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/decimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_numero"
            android:text="@string/decimal"
            android:textColor="@color/colorButtonNumber" />

    </android.support.v7.widget.GridLayout>

</RelativeLayout>